# django-sca-helper

./: MANIFEST.in  pyproject.toml  pytest.ini  setup.py
.github/workflows/: workflow.yml
django_helper/: __init__.py  test.py
django_helper/tests/: test_assert.py
